syntax = "proto3";

package grpc_server;

option go_package = "internal/grpc_server";

message AuthRequestPayload {
  string email = 1;
  string password = 2;
}

message AuthResponsePayload {
  bool error = 1;
  string message = 2;
  string data = 3;
}

service AuthService {
  rpc Authenticate(AuthRequestPayload) returns (AuthResponsePayload);
}
